# reconstructions

./: .gitignore  CLAUDE.md  PHASE1_CODE_REVIEW.md  README.md  REFINED_README.md  VERIFICATION_REPORT.md  com.reconstructions.consolidation.plist  development_plan.md  pyproject.toml  run_hook.sh  spec.md
docs/: ARCHITECTURE.md  DEVELOPMENT_STATUS.md  PROJECT_CONTEXT.md
docs/plans/: 2026-01-25-fast-vector-mcp-design.md  2026-01-25-fast-vector-mcp-implementation.md
src/reconstructions/: __init__.py  bindings.py  certainty.py  cli.py  consolidation.py  constraints.py  core.py  encoder.py  encoding.py  engine.py  fast_embedder.py  features.py  health.py  identity.py  learning.py  llm_client.py  llm_interface.py  main.py  mcp_server.py  metrics.py  patterns.py  reconstruction.py  salience.py  store.py  strength.py  vector_index.py
tests/: PHASE1_TEST_RESULTS.md  manual_test.py  performance_test.py
tests/integration/: test_adaptive_consolidation.py  test_consolidation.py  test_e2e.py  test_health_monitoring.py  test_hook_integration.py  test_hooks_consolidation.py  test_identity_aware_encoding.py
tests/unit/: test_adaptive_scheduler.py  test_bindings.py  test_capture.py  test_certainty.py  test_certainty_integration.py  test_cli.py  test_constraints.py  test_context_manager.py  test_encoder.py  test_encoding.py  test_engine.py  test_evolution.py  test_fast_embedder.py  test_features.py  test_fragment.py  test_health.py  test_hooks.py  test_identity.py  test_identity_integration.py  test_llm_client.py  test_llm_compression.py  test_llm_interface.py  test_mcp_server.py  (+11 more)
(+10 files in other folders)
